# LinuxTrafficSignals

./: .gitignore  CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac
assets/: simple.frm
src/core/: main.cc  main.cpp
src/hdrs/: NcursesDisplay.h  NcursesDisplay.hpp  SequenceLogic.hpp  SignalFrames.hpp
src/transform/: SequenceLogic.cc  SequenceLogic.cpp
